--- a/SS_Beauty_Parlour.html
+++ b/SS_Beauty_Parlour.html
@@ -47,7 +47,7 @@
         /* CSS */
         .hero-section {
             height: 100vh;
-            background: url("images/salon-hero-BcDOe9FR.JPG") center center/cover no-repeat;
+            background: url("salon-hero-BcDOe9FR.JPG") center center/cover no-repeat;
             position: relative;
         }
 
@@ -280,7 +280,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#home">
-                <img src="images/logo.png" alt="SS Logo" class="logo-img">
+                <img src="logo.png" alt="SS Logo" class="logo-img">
                 SS Beauty Saloone
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
@@ -549,7 +549,7 @@
             <div class="row align-items-center gy-3">
                 <div class="col-md-6 d-flex align-items-center gap-2">
                     <a class="navbar-brand" href="#home">
-                        <img src="images/logo.png" alt="SS Logo" class="logo-img">
+                        <img src="logo.png" alt="SS Logo" class="logo-img">
                         SS Beauty Saloone
                     </a>
 
