--- a/index.html
+++ b/index.html
@@ -300,17 +300,21 @@
     </nav>
 
     <!-- HERO SECTION -->
-    <section id="home" class="hero-section">
-        <div class="overlay">
-            <div class="container text-center text-white">
-                <h1 class="display-4 fw-bold">Welcome to SS Beauty Saloone</h1>
-                <p class="lead">Redefining Elegance & Beauty</p>
-                <a href="#services" class="btn btn-rose btn-lg me-2">
-                    <i class="fa-solid fa-sparkles me-2"></i>Explore Services
-                </a>
-            </div>
+   <section id="home" class="hero-section" 
+    style="height:100vh; 
+           background:url('salon-hero-BcDOe9FR.JPG') center center/cover no-repeat; 
+           position:relative;">
+    <div class="overlay">
+        <div class="container text-center text-white">
+            <h1 class="display-4 fw-bold">Welcome to SS Beauty Saloone</h1>
+            <p class="lead">Redefining Elegance & Beauty</p>
+            <a href="#services" class="btn btn-rose btn-lg me-2">
+                <i class="fa-solid fa-sparkles me-2"></i>Explore Services
+            </a>
         </div>
-    </section>
+    </div>
+</section>
+
 
 
     <!-- ABOUT -->
@@ -603,3 +607,4 @@
 </body>
 
 </html>
+
